--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="xrv-gS-mwI" userLabel="Cell Image">
-                                                    <rect key="frame" x="20" y="11" width="353" height="230"/>
+                                                    <rect key="frame" x="16" y="4" width="361" height="244"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                             <integer key="value" value="16"/>
@@ -37,32 +37,34 @@
                                                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3pU-Wi-4kS" userLabel="Like Button">
+                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="dBA-Nq-vmN"/>
+                                                        <constraint firstAttribute="width" constant="44" id="yVY-pN-FMW"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" image="like_button_on"/>
+                                                </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="26 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TkV-x7-FfJ" userLabel="Date Label">
-                                                    <rect key="frame" x="27.999999999999993" y="217.33333333333334" width="102.33333333333331" height="15.666666666666657"/>
+                                                    <rect key="frame" x="24" y="224" width="103" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3pU-Wi-4kS" userLabel="Like Button">
-                                                    <rect key="frame" x="329" y="11" width="44" height="44"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="44" id="46e-Py-wNe"/>
-                                                        <constraint firstAttribute="height" constant="44" id="dBA-Nq-vmN"/>
-                                                    </constraints>
-                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" title="Button" image="like_button_on"/>
-                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" name="YP Black"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="TkV-x7-FfJ" secondAttribute="bottom" constant="8" id="BWn-F3-Nib"/>
-                                                <constraint firstItem="TkV-x7-FfJ" firstAttribute="leading" secondItem="gyC-SQ-4Yc" secondAttribute="leadingMargin" constant="8" id="Faa-hN-EJC"/>
-                                                <constraint firstItem="xrv-gS-mwI" firstAttribute="top" secondItem="gyC-SQ-4Yc" secondAttribute="topMargin" id="GjZ-2Q-vX4"/>
-                                                <constraint firstItem="3pU-Wi-4kS" firstAttribute="top" secondItem="gyC-SQ-4Yc" secondAttribute="topMargin" id="R0A-u3-1gd"/>
-                                                <constraint firstItem="xrv-gS-mwI" firstAttribute="leading" secondItem="gyC-SQ-4Yc" secondAttribute="leadingMargin" id="ayf-sP-aaN"/>
-                                                <constraint firstItem="3pU-Wi-4kS" firstAttribute="trailing" secondItem="gyC-SQ-4Yc" secondAttribute="trailingMargin" id="dwL-fj-Mh0"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="xrv-gS-mwI" secondAttribute="bottom" id="yC7-51-OT5"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="xrv-gS-mwI" secondAttribute="trailing" id="zhn-Dg-im4"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="TkV-x7-FfJ" secondAttribute="trailing" constant="20" symbolic="YES" id="8lM-Hv-xyQ"/>
+                                                <constraint firstItem="TkV-x7-FfJ" firstAttribute="leading" secondItem="xrv-gS-mwI" secondAttribute="leading" constant="8" id="COY-Tu-dYo"/>
+                                                <constraint firstItem="TkV-x7-FfJ" firstAttribute="bottom" secondItem="xrv-gS-mwI" secondAttribute="bottom" constant="-8" id="J0X-y7-bM1"/>
+                                                <constraint firstItem="xrv-gS-mwI" firstAttribute="top" secondItem="gyC-SQ-4Yc" secondAttribute="top" constant="4" id="PcV-jq-Dbr"/>
+                                                <constraint firstItem="3pU-Wi-4kS" firstAttribute="top" secondItem="xrv-gS-mwI" secondAttribute="top" id="QnF-6J-6C8"/>
+                                                <constraint firstItem="3pU-Wi-4kS" firstAttribute="trailing" secondItem="xrv-gS-mwI" secondAttribute="trailing" id="d6S-rh-O77"/>
+                                                <constraint firstAttribute="bottom" secondItem="xrv-gS-mwI" secondAttribute="bottom" constant="4" id="dT6-4g-jwN"/>
+                                                <constraint firstAttribute="trailing" secondItem="xrv-gS-mwI" secondAttribute="trailing" constant="16" id="iwX-TD-P8V"/>
+                                                <constraint firstItem="xrv-gS-mwI" firstAttribute="leading" secondItem="gyC-SQ-4Yc" secondAttribute="leading" constant="16" id="ved-EY-Emp"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
