--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -131,9 +131,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="AbN-RH-wHV">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNZ-bu-yJQ">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                            </imageView>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="414" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="AbN-RH-wHV">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFY-sy-Ocj" userLabel="Sharing Button">
+                                        <rect key="frame" x="188.66666666666666" y="785" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Xj7-RA-WeN"/>
+                                            <constraint firstAttribute="width" constant="50" id="sNv-Gb-X6b"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="sharing_button"/>
+                                        <connections>
+                                            <action selector="didTapShareButton:" destination="Q2T-du-fCd" eventType="touchUpInside" id="pEd-No-7ia"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="AbN-RH-wHV" firstAttribute="bottom" secondItem="DNZ-bu-yJQ" secondAttribute="bottom" id="Bsq-s7-5ko"/>
+                                    <constraint firstItem="AbN-RH-wHV" firstAttribute="top" secondItem="DNZ-bu-yJQ" secondAttribute="top" id="SeS-aD-ghU"/>
+                                    <constraint firstAttribute="trailing" secondItem="AbN-RH-wHV" secondAttribute="trailing" id="vOc-xu-tyf"/>
+                                    <constraint firstItem="AbN-RH-wHV" firstAttribute="leading" secondItem="DNZ-bu-yJQ" secondAttribute="leading" id="xYk-bb-itk"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="aqf-h3-xCt"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="uPQ-bT-Dme"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Q2T-du-fCd" id="cA9-ZD-w8M"/>
+                                </connections>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5LZ-jb-J3A">
                                 <rect key="frame" x="16" y="91" width="24" height="24"/>
                                 <constraints>
@@ -151,22 +179,25 @@
                         <viewLayoutGuide key="safeArea" id="VIf-4L-RFR"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
-                            <constraint firstItem="VIf-4L-RFR" firstAttribute="trailing" secondItem="AbN-RH-wHV" secondAttribute="trailing" id="6GC-wM-rsj"/>
                             <constraint firstItem="5LZ-jb-J3A" firstAttribute="leading" secondItem="ZG5-mG-reH" secondAttribute="leading" constant="16" id="H6C-yJ-wnO"/>
-                            <constraint firstItem="AbN-RH-wHV" firstAttribute="leading" secondItem="VIf-4L-RFR" secondAttribute="leading" id="cyn-px-xyT"/>
+                            <constraint firstItem="DNZ-bu-yJQ" firstAttribute="trailing" secondItem="VIf-4L-RFR" secondAttribute="trailing" id="H6L-A5-i5b"/>
+                            <constraint firstItem="VIf-4L-RFR" firstAttribute="bottom" secondItem="oFY-sy-Ocj" secondAttribute="bottom" constant="17" id="Zd2-Ky-cew"/>
+                            <constraint firstItem="DNZ-bu-yJQ" firstAttribute="top" secondItem="ZG5-mG-reH" secondAttribute="top" id="Zwo-e6-xYs"/>
+                            <constraint firstItem="oFY-sy-Ocj" firstAttribute="centerX" secondItem="VIf-4L-RFR" secondAttribute="centerX" id="fR4-MS-yzv"/>
                             <constraint firstItem="5LZ-jb-J3A" firstAttribute="top" secondItem="ZG5-mG-reH" secondAttribute="top" constant="91" id="fir-8o-Q2O"/>
-                            <constraint firstItem="VIf-4L-RFR" firstAttribute="bottom" secondItem="AbN-RH-wHV" secondAttribute="bottom" id="tHX-Wx-LHL"/>
-                            <constraint firstItem="AbN-RH-wHV" firstAttribute="top" secondItem="VIf-4L-RFR" secondAttribute="top" id="zDP-8P-idK"/>
+                            <constraint firstItem="DNZ-bu-yJQ" firstAttribute="bottom" secondItem="ZG5-mG-reH" secondAttribute="bottom" id="gW2-cq-TRw"/>
+                            <constraint firstItem="DNZ-bu-yJQ" firstAttribute="leading" secondItem="VIf-4L-RFR" secondAttribute="leading" id="kEB-CX-OM7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9pj-3r-sWP"/>
                     <connections>
                         <outlet property="imageView" destination="AbN-RH-wHV" id="lhM-hB-HX7"/>
+                        <outlet property="scrollView" destination="DNZ-bu-yJQ" id="i6b-Ku-aXK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8fW-rV-B5s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1266" y="-287"/>
+            <point key="canvasLocation" x="1264.885496183206" y="-287.32394366197184"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="UXz-lL-kGp">
@@ -259,6 +290,7 @@
         <image name="like_button_on" width="42" height="42"/>
         <image name="person.crop.circle.fill" catalog="system" width="128" height="123"/>
         <image name="person.crop.rectangle.stack.fill" catalog="system" width="126" height="128"/>
+        <image name="sharing_button" width="51" height="51"/>
         <namedColor name="YP Black">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
