--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -130,24 +130,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFY-sy-Ocj" userLabel="Sharing Button">
+                                <rect key="frame" x="171" y="784" width="51" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="LfZ-dl-uXF"/>
+                                    <constraint firstAttribute="width" constant="51" id="hec-1D-7n9"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="sharing_button"/>
+                                <connections>
+                                    <action selector="didTapShareButton:" destination="Q2T-du-fCd" eventType="touchUpInside" id="pEd-No-7ia"/>
+                                </connections>
+                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNZ-bu-yJQ">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="414" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="AbN-RH-wHV">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFY-sy-Ocj" userLabel="Sharing Button">
-                                        <rect key="frame" x="171.66666666666666" y="785" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="Xj7-RA-WeN"/>
-                                            <constraint firstAttribute="width" constant="50" id="sNv-Gb-X6b"/>
-                                        </constraints>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" image="sharing_button"/>
-                                        <connections>
-                                            <action selector="didTapShareButton:" destination="Q2T-du-fCd" eventType="touchUpInside" id="pEd-No-7ia"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="AbN-RH-wHV" firstAttribute="bottom" secondItem="DNZ-bu-yJQ" secondAttribute="bottom" id="Bsq-s7-5ko"/>
@@ -180,12 +180,12 @@
                         <constraints>
                             <constraint firstItem="5LZ-jb-J3A" firstAttribute="leading" secondItem="ZG5-mG-reH" secondAttribute="leading" constant="16" id="H6C-yJ-wnO"/>
                             <constraint firstItem="DNZ-bu-yJQ" firstAttribute="trailing" secondItem="VIf-4L-RFR" secondAttribute="trailing" id="H6L-A5-i5b"/>
-                            <constraint firstItem="VIf-4L-RFR" firstAttribute="bottom" secondItem="oFY-sy-Ocj" secondAttribute="bottom" constant="17" id="Zd2-Ky-cew"/>
+                            <constraint firstItem="oFY-sy-Ocj" firstAttribute="centerX" secondItem="VIf-4L-RFR" secondAttribute="centerX" id="ON1-qU-mX8"/>
                             <constraint firstItem="DNZ-bu-yJQ" firstAttribute="top" secondItem="ZG5-mG-reH" secondAttribute="top" id="Zwo-e6-xYs"/>
-                            <constraint firstItem="oFY-sy-Ocj" firstAttribute="centerX" secondItem="VIf-4L-RFR" secondAttribute="centerX" id="fR4-MS-yzv"/>
                             <constraint firstItem="5LZ-jb-J3A" firstAttribute="top" secondItem="ZG5-mG-reH" secondAttribute="top" constant="91" id="fir-8o-Q2O"/>
                             <constraint firstItem="DNZ-bu-yJQ" firstAttribute="bottom" secondItem="ZG5-mG-reH" secondAttribute="bottom" id="gW2-cq-TRw"/>
                             <constraint firstItem="DNZ-bu-yJQ" firstAttribute="leading" secondItem="VIf-4L-RFR" secondAttribute="leading" id="kEB-CX-OM7"/>
+                            <constraint firstItem="VIf-4L-RFR" firstAttribute="bottom" secondItem="oFY-sy-Ocj" secondAttribute="bottom" constant="17" id="nPR-Tv-Lfv"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9pj-3r-sWP"/>
